Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-1641

Windows proactor hang on incoming connections

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-c-0.18.0, proton-c-0.19.0
    • proton-c-0.19.0
    • proton-c
    • None
    • Windows

    Description

      Missing lock. Critical section guard required even though system call entry and exit separate the memory accesses by the two threads.

      Attachments

        Activity

          People

            cliffjansen Clifford Jansen
            cliffjansen Clifford Jansen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: