PROTON-1641: Windows proactor hang on inbound connections